--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Sketchpad</title>
 
-	<link rel="stylesheet" href="sketchpad.css">
+	<link rel="stylesheet" href="stylesheets/sketchpad.css">
 
 </head>
 <body>
@@ -39,8 +39,8 @@
 
 	</div> <!-- end sketchpad-container -->
 
-	<script src="jquery-min.js"></script>
-	<script src="sketchpad.js"></script>
+	<script src="js/jquery-min.js"></script>
+	<script src="js/sketchpad.js"></script>
 	
 </body>
 </html>
