Adjusted alignment of brush buttons

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 			
 			<ul id="brush-buttons">
 				<li>
-					<button class="brushes" type="button" data-brush="5"><span style="font-size: 25px; vertical-align: middle;">&bull;</span> Small</button>
+					<button class="brushes" type="button" data-brush="5"><span style="font-size: 25px; vertical-align: middle; padding-left: 8px;">&bull;</span> Small</button>
 				</li>
 				<li>
-					<button class="brushes" type="button" data-brush="10"><span style="font-size: 45px; vertical-align: middle;">&bull;</span> Med</button>
+					<button class="brushes" type="button" data-brush="10"><span style="font-size: 45px; vertical-align: middle; padding-left: 4px;">&bull;</span> Medium</button>
 				</li>
 				<li>
-					<button class="brushes" type="button" data-brush="15"><span style="font-size: 65px; vertical-align: middle;">&bull;</span> Lg</button>
+					<button class="brushes" type="button" data-brush="15"><span style="font-size: 65px; vertical-align: middle; padding-left: 1px;">&bull;</span> Large</button>
 				</li>
 				<li>
 					<button class="brushes" type="button" data-brush="25"><span style="font-size: 75px; vertical-align: middle;">&bull;</span> XL</button>
